nco (4.0.6-1) unstable; urgency=low

  * new upstream version (clang, YYYYMMDD-averaging, xtr ass crd)

 -- Charlie Zender <zender@uci.edu>  Fri, 14 Oct 2010 11:30:56 -0700

nco (4.0.5-1) unstable; urgency=low

  * new upstream version (fix ncks hyp NC4 bug, ncra CF crd bug)
  * debian/control
    - require libudunits2-0, libudunits2-dev
  * debian/rules
    - build with DEB_BUILD_OPTIONS='dap-netcdf netcdf4 udunits2'

 -- Charlie Zender <zender@uci.edu>  Thu, 13 Oct 2010 11:30:56 -0700

nco (4.0.4-1) unstable; urgency=low

  * new upstream version (chunking everywhere, ncrename bugfix, ncks -m)

 -- Charlie Zender <zender@uci.edu>  Thu, 02 Sep 2010 20:34:38 -0700

nco (4.0.3-1) unstable; urgency=low

  * new upstream version (cf_date() bug, ncbo bug, configure tweaks)
  * Switch to dpkg-source 3.0 (quilt) format

 -- Charlie Zender <zender@uci.edu>  Thu, 02 Sep 2010 18:05:48 -0700

nco (4.0.2-1) unstable; urgency=low

  * new upstream version (namespace, ncatted NUL, ncap2 1-d arrays)

 -- Charlie Zender <zender@uci.edu>  Sun, 27 Jun 2010 11:04:41 -0700

nco (4.0.1-1) unstable; urgency=low

  [ Charlie Zender ]
  * new upstream version (fix_rec_dmn, mk_rec_dmn, .ncrename)
  * debian/copyright
    - remove John Burkhardt
  * debian/control
    - add ${misc:Depends}

  [ Francesco Paolo Lovergine ]
  * Policy bumped to 3.8.4.
  * Debhelper level set to 7.
  * Added me as uploaders.
  * Removing top dir info file.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 26 Apr 2010 22:51:21 +0200

nco (4.0.0-1) unstable; urgency=low

  * new upstream version (fitting, calendar, bilinear interp)

 -- Charlie Zender <zender@uci.edu>  Tue, 05 Jan 2010 12:06:24 -0800

nco (3.9.9-1) unstable; urgency=low

  * new upstream version (chunking, NC_STRING, GSL stats/interp, rebasing)
  * debian/control
    - Standards-Version: 3.8.2
  * debian/copyright
    - includes everyone now
  * debian/compat
    - change from 4 to 5
