@@ -1,4 +1,4 @@
-# $Header: /data/zender/nco_20150216/nco/doc/debian.txt,v 1.159 2010-10-14 22:09:09 zender Exp $ -*-text-*-
+# $Header: /data/zender/nco_20150216/nco/doc/debian.txt,v 1.160 2011-01-15 06:03:00 zender Exp $ -*-text-*-
 
 # Purpose: Debian information for NCO netCDF Operators project
 # Notes describe procedure to manipulate Debian-specific distribution
@@ -199,8 +199,8 @@ DIST=sid sudo pbuilder update # Update chroot before building package in it
 # dget http://ftp.debian.org/debian/pool/main/n/netcdf/netcdf_3.6.1-1.dsc
 # apt-get source nco # Get package source
 sudo /bin/rm /var/cache/pbuilder/result/nco_4.0.6* # Cleanup prior build
-# To pass DEB_BUILD_OPTIONS to pbuilder while using sudo, one must
-# prevent resetting environment variables by modifying sudoers with visudo 
+# To pass DEB_BUILD_OPTIONS to pbuilder while using sudo, one must first
+# modify sudoers with visudo to prevent sudo from resetting environment
 export DEB_BUILD_OPTIONS='dap-netcdf netcdf4 udunits2'
 cd ${DATA};DIST=sid sudo pbuilder build nco_4.0.6-1.dsc > ~/foo.nco.pbuilder 2>&1
 cd /var/cache/pbuilder/result;debsign -k6F635D10 nco_4.0.6-1_*.changes
