@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.631 2011-01-15 05:47:06 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.632 2011-01-15 06:03:00 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -66,7 +66,7 @@ Try to disable Spammers' machines:
 <p><hr width="100%"></p>
 <p><h1 align="center">Welcome to the netCDF Operator (NCO) Homepage</h1>
 
-<p><h2>Current NCO version is 4.0.5 last updated on <!--#flastmod file="VERSION"--> </h2>
+<p><h2>Current NCO version is 4.0.6 last updated on <!--#flastmod file="VERSION"--> </h2>
 
 <table border=0 width=100%>
 
@@ -119,7 +119,9 @@ Keep the size &lt;250&times;250 pixels.<br>
 <h2>NCO Milestones</h2>
 
 <ul>
-<li>2010 Winter?: NCO 4.0.6</li>
+<li>2011 Winter?: NCO 4.0.7</li>
+
+<li>2011 Jan&nbsp;15: NCO 4.0.6</li>
 
 <li>2010 Oct&nbsp;13: NCO 4.0.5</li>
 
@@ -518,13 +520,14 @@ Releases receive unique CVS tags and their tarballs are stored
 You can also retrieve the source of tagged versions directly
 <a name="#Source">with CVS</a>.
 <ul>
-<li><b>NCO 4.0.7</b>: (<i>Future</i>) 
+<li><b>NCO 4.0.8</b>: (<i>Future</i>) 
+netCDF4 compound types?;
+World peace?
+<li><b>NCO 4.0.7</b>: (<i>In progress</i>)
 Fix degenerate hyperslab <a href="#bug_hyp_dgn">bug</a>?;
 Stride works with DAP?;
 <tt>NC_CHAR</tt> with DAP?;
-netCDF4 compound types?;
-World peace?
-<li><b>NCO 4.0.6</b>: (<i>In progress</i>)
+<li><b>NCO 4.0.6</b>: 
 <tt>clang</tt>-compliance;
 Fix <tt>ncra</tt> YYYYMMDD-<tt>date</tt> <a href="#bug_ncra_cf_YYYYMMDD_date">bug</a>;
 Extract all associated coordinates;
@@ -723,19 +726,19 @@ Thanks to NSF for supporting AIX machines at NCAR over the years.
 <h3><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux</a></h3>
 <ul>
 <!--
-<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.0.5</a></li>
+<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.0.6</a></li>
 -->
 <a href="http://packages.debian.org/unstable/science/nco">Debian NCO</a> and 
 <a href="http://packages.ubuntu.com/maverick/nco">Ubuntu NCO</a> homepages.
 &lsquo;<tt>aptitude install nco</tt>&rsquo; installs the standard NCO for your Debian-compatible&nbsp;OS.
 Newer Debian/Ubuntu flavors (i.e., Sid and Maverick) supply the latest numbered NCO release.
 Even newer (pre-release!) packages are available for intrepid Debian/Ubuntu users as described <a href="http://nco.cvs.sf.net/nco/nco/doc/prerelease.txt">here</a>.
-<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.0.5-1_i386.deb</tt>&rsquo;):</dt>
-<li><a href="src/nco_4.0.5-1_amd64.deb">nco_4.0.5-1_amd64.deb</a> (<!--#fsize file="src/nco_4.0.5-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.0.5-1_amd64.deb"-->)</li>
-<li><a href="src/nco_4.0.5-1.dsc">nco_4.0.5-1.dsc</a> (<!--#fsize file="src/nco_4.0.5-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.0.5-1.dsc"-->)</li>
-<li><a href="src/nco_4.0.5-1_amd64.changes">nco_4.0.5-1_amd64.changes</a> (<!--#fsize file="src/nco_4.0.5-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.0.5-1_amd64.changes"-->)</li>
-<li><a href="src/nco_4.0.5.orig.tar.gz">nco_4.0.5.orig.tar.gz</a> (<!--#fsize file="src/nco_4.0.5.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.0.5.orig.tar.gz"-->)</li>
-<li><a href="src/nco_4.0.5-1.diff.gz">nco_4.0.5-1.diff.gz</a> (<!--#fsize file="src/nco_4.0.5-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.0.5-1_amd64.changes"-->)</li>
+<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.0.6-1_i386.deb</tt>&rsquo;):</dt>
+<li><a href="src/nco_4.0.6-1_amd64.deb">nco_4.0.6-1_amd64.deb</a> (<!--#fsize file="src/nco_4.0.6-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.0.6-1_amd64.deb"-->)</li>
+<li><a href="src/nco_4.0.6-1.dsc">nco_4.0.6-1.dsc</a> (<!--#fsize file="src/nco_4.0.6-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.0.6-1.dsc"-->)</li>
+<li><a href="src/nco_4.0.6-1_amd64.changes">nco_4.0.6-1_amd64.changes</a> (<!--#fsize file="src/nco_4.0.6-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.0.6-1_amd64.changes"-->)</li>
+<li><a href="src/nco_4.0.6.orig.tar.gz">nco_4.0.6.orig.tar.gz</a> (<!--#fsize file="src/nco_4.0.6.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.0.6.orig.tar.gz"-->)</li>
+<li><a href="src/nco_4.0.6-1.diff.gz">nco_4.0.6-1.diff.gz</a> (<!--#fsize file="src/nco_4.0.6-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.0.6-1_amd64.changes"-->)</li>
 Thanks to Daniel Baumann, Barry deFreese, Francesco Lovergine, 
 Brian Mays, Rorik Peterson, and Matej Vela for their help packaging
 NCO for Debian over the years. 
@@ -778,9 +781,9 @@ Thanks to Patrice Dumas, Ed Hill, and Orion Poplawski for packaging NCO RPMs ove
 <h3><a href="http://www.apple.com/macosx/">Mac&nbsp;OS&nbsp;X/Darwin</a></h3>
 <ul>
 <!-- Copy DMG files from http://ps.uci.edu/~pscsg/nco
-wget http://ps.uci.edu/~pscsg/nco/nco-4.0.5_x86_10.5.dmg -O /tmp/nco-4.0.5_x86_10.5.dmg
-/usr/bin/scp /tmp/nco-4.0.5_x86_10.5.dmg zender,nco@web.sf.net:/home/groups/n/nc/nco/htdocs/src
-scp /tmp/nco-4.0.5_x86_10.5.dmg dust.ess.uci.edu:/var/www/html/nco/src
+wget http://ps.uci.edu/~pscsg/nco/nco-4.0.6_x86_10.5.dmg -O /tmp/nco-4.0.6_x86_10.5.dmg
+/usr/bin/scp /tmp/nco-4.0.6_x86_10.5.dmg zender,nco@web.sf.net:/home/groups/n/nc/nco/htdocs/src
+scp /tmp/nco-4.0.6_x86_10.5.dmg dust.ess.uci.edu:/var/www/html/nco/src
 -->
 Use the <a href="http://en.wikipedia.org/wiki/Apple_Disk_Image">DMG</a> files if you do not have MacPorts installed. You may need to add <tt>/opt/local/bin</tt> to your executable path to access the operators.
 <li><a href="src/nco-4.0.3_x86_10.6.dmg">nco-4.0.3_x86_10.6.dmg</a> (<!--#fsize file="src/nco-4.0.3_x86_10.6.dmg"-->): For Mac OS 10.6 (last updated <!--#flastmod file="src/nco-4.0.3_x86_10.6.dmg"-->). Maintained by Chad Cantwell.</li>
@@ -916,10 +919,10 @@ The best way to acquire NCO sources is with <a href="http://www.cvshome.org">CVS
 The second best way is to download the source as a compressed tarfile:
 <ul>
 <li>
-<a href="src/nco-4.0.5.tar.gz">nco-4.0.5.tar.gz</a> 
-(<!--#fsize file="src/nco-4.0.5.tar.gz"--> compressed tar-file)<br>
-<!--#exec cmd="openssl dgst -md5 src/nco-4.0.5.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha1 src/nco-4.0.5.tar.gz"--> 
+<a href="src/nco-4.0.6.tar.gz">nco-4.0.6.tar.gz</a> 
+(<!--#fsize file="src/nco-4.0.6.tar.gz"--> compressed tar-file)<br>
+<!--#exec cmd="openssl dgst -md5 src/nco-4.0.6.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha1 src/nco-4.0.6.tar.gz"--> 
 </li>
 </ul>
 
@@ -940,10 +943,10 @@ Hit <tt>return</tt> when asked for the CVS password.
 This login procedure is only required the first time you access the CVS server.
 Then you may retrieve any NCO distribution you wish.
 Usually you wish to retrieve a recent tagged (i.e., released) version.
-This command retrieves and places NCO version <tt>4.0.5</tt> (which is
+This command retrieves and places NCO version <tt>4.0.6</tt> (which is
 tagged as <tt>nco-4_0_5</tt> due to CVS rules) into local directory
-<tt>nco-4.0.5</tt>:   
-<p><tt>cvs -z3 -d:pserver:anonymous@nco.cvs.sf.net:/cvsroot/nco co -r nco-4_0_5 -d nco-4.0.5 nco</tt></p>
+<tt>nco-4.0.6</tt>:   
+<p><tt>cvs -z3 -d:pserver:anonymous@nco.cvs.sf.net:/cvsroot/nco co -r nco-4_0_5 -d nco-4.0.6 nco</tt></p>
 This command retrieves the current (&ldquo;bleeding edge&rdquo;)
 development version of NCO into a local directory named <tt>nco</tt>:
 <p><tt>cvs -z3 -d:pserver:anonymous@nco.cvs.sf.net:/cvsroot/nco co -kk nco</tt></p>
@@ -952,7 +955,7 @@ Track changes to the development version using
 One difference between running a "tagged" release 
 (e.g., <tt>nco-4_0_5</tt>) and the development version is that the
 tagged release operators will print a valid version number (e.g.,
-<tt>4.0.5</tt>) when asked to do so with the <tt>-r</tt> flag
+<tt>4.0.6</tt>) when asked to do so with the <tt>-r</tt> flag
 (e.g., <tt>ncks -r</tt>).
 The development version simply places today's date in place of the
 version.
