@@ -1,6 +1,8 @@
 nco (4.0.6-1) unstable; urgency=low
 
   * new upstream version (clang, YYYYMMDD-averaging, xtr ass crd)
+  * debian/rules
+    - build with dap-netcdf netcdf4 udunits2 by default
 
  -- Charlie Zender <zender@uci.edu>  Fri, 14 Oct 2010 11:30:56 -0700
 
